friday/src/main/java/com/friday/FridayParser.java
// Generated from FridayParser.g4 by ANTLR 4.13.2
package com.friday;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FridayParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INLINE_COMMENT=1, COMMENT=2, SPACE=3, PRIVATE=4, PUBLIC=5, STRUCT=6, RETURN=7, 
		PRINT=8, FN=9, FOR=10, WHILE=11, DEFER=12, NATIVE=13, NAMESPACE=14, USING=15, 
		CONST=16, LET=17, NEW=18, IF=19, ELIF=20, ELSE=21, AS=22, SIZEOF=23, ALIGNOF=24, 
		WHERE=25, BOOL_LIT=26, NULL_LIT=27, INT_LIT=28, FLOAT_LIT=29, STRING_LIT=30, 
		CHAR_LIT=31, LEFT_PAREN=32, LEFT_SQUARE=33, LEFT_CURLY=34, RIGHT_PAREN=35, 
		RIGHT_SQUARE=36, RIGHT_CURLY=37, SEMI=38, COL=39, COMMA=40, ARROW=41, 
		FAT_ARROW=42, INCREMENT=43, DECREMENT=44, PLUS=45, MINUS=46, STAR=47, 
		SLASH=48, MODULO=49, LSHIFT=50, RSHIFT=51, AMPERSAND=52, PIPELINE=53, 
		LESS=54, GREATER=55, LESS_EQ=56, GREATER_EQ=57, EQUALS=58, NOT_EQUALS=59, 
		ASSIGN=60, PLUS_ASSIGN=61, MINUS_ASSIGN=62, STAR_ASSIGN=63, SLASH_ASSIGN=64, 
		MODULO_ASSIGN=65, LSHIFT_ASSIGN=66, RSHIFT_ASSIGN=67, AMPERSAND_ASSIGN=68, 
		PIPELINE_ASSIGN=69, DOTDOT=70, DOTDOTEQ=71, TILDE=72, DOT=73, AND=74, 
		OR=75, NOT=76, OPERATOR_IDENTIFIER=77, IDENTIFIER=78;
	public static final int
		RULE_translationUnit = 0, RULE_topLevelStatement = 1, RULE_namespaceStatement = 2, 
		RULE_usingStatement = 3, RULE_functionStatement = 4, RULE_structStatement = 5, 
		RULE_statement = 6, RULE_syntacticalScope = 7, RULE_functionScope = 8, 
		RULE_expression = 9, RULE_type = 10, RULE_typeParameters = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"translationUnit", "topLevelStatement", "namespaceStatement", "usingStatement", 
			"functionStatement", "structStatement", "statement", "syntacticalScope", 
			"functionScope", "expression", "type", "typeParameters"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'private'", "'public'", "'struct'", "'return'", 
			"'print'", "'fn'", "'for'", "'while'", "'defer'", "'native'", "'namespace'", 
			"'using'", "'const'", "'let'", "'new'", "'if'", "'elif'", "'else'", "'as'", 
			"'sizeof'", "'alignof'", "'where'", null, "'null'", null, null, null, 
			null, "'('", "'['", "'{'", "')'", "']'", "'}'", "';'", "':'", "','", 
			"'->'", "'=>'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<<'", 
			"'>>'", "'&'", "'|'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'='", 
			"'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", "'&='", "'|='", 
			"'..'", "'..='", "'~'", "'.'", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INLINE_COMMENT", "COMMENT", "SPACE", "PRIVATE", "PUBLIC", "STRUCT", 
			"RETURN", "PRINT", "FN", "FOR", "WHILE", "DEFER", "NATIVE", "NAMESPACE", 
			"USING", "CONST", "LET", "NEW", "IF", "ELIF", "ELSE", "AS", "SIZEOF", 
			"ALIGNOF", "WHERE", "BOOL_LIT", "NULL_LIT", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
			"CHAR_LIT", "LEFT_PAREN", "LEFT_SQUARE", "LEFT_CURLY", "RIGHT_PAREN", 
			"RIGHT_SQUARE", "RIGHT_CURLY", "SEMI", "COL", "COMMA", "ARROW", "FAT_ARROW", 
			"INCREMENT", "DECREMENT", "PLUS", "MINUS", "STAR", "SLASH", "MODULO", 
			"LSHIFT", "RSHIFT", "AMPERSAND", "PIPELINE", "LESS", "GREATER", "LESS_EQ", 
			"GREATER_EQ", "EQUALS", "NOT_EQUALS", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
			"STAR_ASSIGN", "SLASH_ASSIGN", "MODULO_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
			"AMPERSAND_ASSIGN", "PIPELINE_ASSIGN", "DOTDOT", "DOTDOTEQ", "TILDE", 
			"DOT", "AND", "OR", "NOT", "OPERATOR_IDENTIFIER", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FridayParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FridayParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TranslationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FridayParser.EOF, 0); }
		public List<TopLevelStatementContext> topLevelStatement() {
			return getRuleContexts(TopLevelStatementContext.class);
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return getRuleContext(TopLevelStatementContext.class,i);
		}
		public TranslationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translationUnit; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitTranslationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TranslationUnitContext translationUnit() throws RecognitionException {
		TranslationUnitContext _localctx = new TranslationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 57968L) != 0)) {
				{
				{
				setState(24);
				topLevelStatement();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelStatementContext extends ParserRuleContext {
		public UsingStatementContext usingStatement() {
			return getRuleContext(UsingStatementContext.class,0);
		}
		public NamespaceStatementContext namespaceStatement() {
			return getRuleContext(NamespaceStatementContext.class,0);
		}
		public StructStatementContext structStatement() {
			return getRuleContext(StructStatementContext.class,0);
		}
		public FunctionStatementContext functionStatement() {
			return getRuleContext(FunctionStatementContext.class,0);
		}
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitTopLevelStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelStatementContext topLevelStatement() throws RecognitionException {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelStatement);
		try {
			setState(36);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(32);
				usingStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				namespaceStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(34);
				structStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(35);
				functionStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamespaceStatementContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<Token> names = new ArrayList<Token>();
		public TerminalNode NAMESPACE() { return getToken(FridayParser.NAMESPACE, 0); }
		public TerminalNode SEMI() { return getToken(FridayParser.SEMI, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(FridayParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(FridayParser.DOT, i);
		}
		public NamespaceStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespaceStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitNamespaceStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceStatementContext namespaceStatement() throws RecognitionException {
		NamespaceStatementContext _localctx = new NamespaceStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_namespaceStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(NAMESPACE);
			setState(39);
			((NamespaceStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((NamespaceStatementContext)_localctx).names.add(((NamespaceStatementContext)_localctx).IDENTIFIER);
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(40);
					match(DOT);
					setState(41);
					((NamespaceStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((NamespaceStatementContext)_localctx).names.add(((NamespaceStatementContext)_localctx).IDENTIFIER);
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(47);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UsingStatementContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<Token> names = new ArrayList<Token>();
		public TerminalNode USING() { return getToken(FridayParser.USING, 0); }
		public TerminalNode SEMI() { return getToken(FridayParser.SEMI, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FridayParser.IDENTIFIER, 0); }
		public UsingStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usingStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitUsingStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsingStatementContext usingStatement() throws RecognitionException {
		UsingStatementContext _localctx = new UsingStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_usingStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(USING);
			setState(50);
			((UsingStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			((UsingStatementContext)_localctx).names.add(((UsingStatementContext)_localctx).IDENTIFIER);
			setState(51);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStatementContext extends ParserRuleContext {
		public FunctionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionStatement; }
	 
		public FunctionStatementContext() { }
		public void copyFrom(FunctionStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NativeFunctionStatementContext extends FunctionStatementContext {
		public Token accessModifier;
		public Token name;
		public Token IDENTIFIER;
		public List<Token> paramsNames = new ArrayList<Token>();
		public TypeContext type;
		public List<TypeContext> paramsTypes = new ArrayList<TypeContext>();
		public TypeContext returnType;
		public TerminalNode NATIVE() { return getToken(FridayParser.NATIVE, 0); }
		public TerminalNode FN() { return getToken(FridayParser.FN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(FridayParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(FridayParser.RIGHT_PAREN, 0); }
		public TerminalNode ARROW() { return getToken(FridayParser.ARROW, 0); }
		public TerminalNode SEMI() { return getToken(FridayParser.SEMI, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COL() { return getTokens(FridayParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(FridayParser.COL, i);
		}
		public TerminalNode PRIVATE() { return getToken(FridayParser.PRIVATE, 0); }
		public TerminalNode PUBLIC() { return getToken(FridayParser.PUBLIC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FridayParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FridayParser.COMMA, i);
		}
		public NativeFunctionStatementContext(FunctionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitNativeFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FreeFunctionStatementContext extends FunctionStatementContext {
		public Token accessModifier;
		public Token name;
		public Token IDENTIFIER;
		public List<Token> paramsNames = new ArrayList<Token>();
		public TypeContext type;
		public List<TypeContext> paramsTypes = new ArrayList<TypeContext>();
		public TypeContext returnType;
		public FunctionScopeContext block;
		public TerminalNode FN() { return getToken(FridayParser.FN, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(FridayParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(FridayParser.RIGHT_PAREN, 0); }
		public TerminalNode ARROW() { return getToken(FridayParser.ARROW, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public FunctionScopeContext functionScope() {
			return getRuleContext(FunctionScopeContext.class,0);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(FridayParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FridayParser.IDENTIFIER, i);
		}
		public TerminalNode OPERATOR_IDENTIFIER() { return getToken(FridayParser.OPERATOR_IDENTIFIER, 0); }
		public List<TerminalNode> COL() { return getTokens(FridayParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(FridayParser.COL, i);
		}
		public TerminalNode PRIVATE() { return getToken(FridayParser.PRIVATE, 0); }
		public TerminalNode PUBLIC() { return getToken(FridayParser.PUBLIC, 0); }
		public List<TerminalNode> COMMA() { return getTokens(FridayParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FridayParser.COMMA, i);
		}
		public FreeFunctionStatementContext(FunctionStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FridayParserVisitor ) return ((FridayParserVisitor<? extends T>)visitor).visitFreeFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionStatementContext functionStatement() throws RecognitionException {
		FunctionStatementContext _localctx = new FunctionStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionStatement);
		int _la;
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new FreeFunctionStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIVATE || _la==PUBLIC) {
					{
					setState(53);
					((FreeFunctionStatementContext)_localctx).accessModifier = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PRIVATE || _la==PUBLIC) ) {
						((FreeFunctionStatementContext)_localctx).accessModifier = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(56);
				match(FN);
				setState(57);
				((FreeFunctionStatementContext)_localctx).name = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==OPERATOR_IDENTIFIER || _la==IDENTIFIER) ) {
					((FreeFunctionStatementContext)_localctx).name = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(58);
				match(LEFT_PAREN);
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(59);
					((FreeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((FreeFunctionStatementContext)_localctx).paramsNames.add(((FreeFunctionStatementContext)_localctx).IDENTIFIER);
					setState(60);
					match(COL);
					setState(61);
					((FreeFunctionStatementContext)_localctx).type = type();
					((FreeFunctionStatementContext)_localctx).paramsTypes.add(((FreeFunctionStatementContext)_localctx).type);
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(62);
						match(COMMA);
						setState(63);
						((FreeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						((FreeFunctionStatementContext)_localctx).paramsNames.add(((FreeFunctionStatementContext)_localctx).IDENTIFIER);
						setState(64);
						match(COL);
						setState(65);
						((FreeFunctionStatementContext)_localctx).type = type();
						((FreeFunctionStatementContext)_localctx).paramsTypes.add(((FreeFunctionStatementContext)_localctx).type);
						}
						}
						setState(70);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(73);
				match(RIGHT_PAREN);
				setState(74);
				match(ARROW);
				setState(75);
				((FreeFunctionStatementContext)_localctx).returnType = type();
				setState(76);
				((FreeFunctionStatementContext)_localctx).block = functionScope();
				}
				break;
			case 2:
				_localctx = new NativeFunctionStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PRIVATE || _la==PUBLIC) {
					{
					setState(78);
					((NativeFunctionStatementContext)_localctx).accessModifier = _input.LT(1);
					_la = _input.LA(1);
					if ( !(_la==PRIVATE || _la==PUBLIC) ) {
						((NativeFunctionStatementContext)_localctx).accessModifier = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(81);
				match(NATIVE);
				setState(82);
				match(FN);
				setState(83);
				((NativeFunctionStatementContext)_localctx).name = match(IDENTIFIER);
				setState(84);
				match(LEFT_PAREN);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(85);
					((NativeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
					((NativeFunctionStatementContext)_localctx).paramsNames.add(((NativeFunctionStatementContext)_localctx).IDENTIFIER);
					setState(86);
					match(COL);
					setState(87);
					((NativeFunctionStatementContext)_localctx).type = type();
					((NativeFunctionStatementContext)_localctx).paramsTypes.add(((NativeFunctionStatementContext)_localctx).type);
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(88);
						match(COMMA);
						setState(89);
						((NativeFunctionStatementContext)_localctx).IDENTIFIER = match(IDENTIFIER);
						((NativeFunctionStatementContext)_localctx).paramsNames.add(((NativeFunctionStatementContext)_localctx).IDENTIFIER);
						setState(90);
						match(COL);
						setState(91);
						((NativeFunctionStatementContext)_localctx).type = type();
						((NativeFunctionStatementContext)_localctx).paramsTypes.add(((NativeFunctionStatementContext)_localctx).type);
						}
						}
						setState(96);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(99);
				match(RIGHT_PAREN);
				setState(100);
				match(ARROW);
				setState(101);
				((NativeFunctionStatementContext)_localctx).returnType = type();
				setState(102);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
